# demo_project

./: Jenkinsfile  LICENSE  README.md  setup.cfg  test-requirements.txt  tox.ini
demo_project/dataset/: make_dataset.py  ventas.csv
demo_project/features/: build_features.py
demo_project/models/: deep_api.py
demo_project/tests/: test_unit_model.py
demo_project/visualization/: visualize.py
docs/: conf.py  index.rst
lstm_test/models/: deep_api.py
notebooks/: 1.0-demo_project_start.ipynb
