# -*- coding: utf-8 -*-
[metadata]
name = demo_project
summary = A demo project using DEEP Data Science template
description-file =
    README.md
author = Aurora Gonzalez-Vidal (UMU)
author-email = aurora.gonzalez2@um.es
version = 0.0.1
license = MIT
home-page = https://github.com/auroragonzalez/demo_project
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    demo_project

[entry_points]

deepaas.v2.model = 
    demo_project = demo_project.models.deep_api

